# foodscribe

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  commands.txt  pyproject.toml
foodscribe/: __init__.py  cli.py
foodscribe/analysis/: __init__.py  stats.py
foodscribe/llm/: __init__.py  client.py  prompts.py
foodscribe/nutrients/: __init__.py  categories.py  lookup.py
foodscribe/retrieval/: __init__.py  mpnet_retriever.py  openai_retriever.py
scripts/: batch_report.py  build_data.py  ingredient_lookup.py  run_provider_comparison.py
tests/: test_analysis.py  test_categories.py  test_llm.py  test_retrieval.py
